cabal-version:      3.0
name:               hbs2-git
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
maintainer:         dzuikov@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -Wno-type-defaults
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


  build-depends: hbs2-core, hbs2-peer
               , aeson
               , async
               , base16-bytestring
               , bytestring
               , cache
               , containers
               , streaming
               , streaming-bytestring
               , streaming-commons
               , streaming-utils
               , cryptonite
               , directory
               , exceptions
               , filelock
               , filepath
               , filepattern
               , hashable
               , http-conduit
               , interpolatedstring-perl6
               , memory
               , microlens-platform
               , mtl
               , prettyprinter
               , prettyprinter-ansi-terminal
               , random
               , resourcet
               , safe
               , saltine
               , serialise
               , split
               , sqlite-simple
               , stm
               , suckless-conf
               , temporary
               , text
               , time
               , timeit
               , transformers
               , typed-process
               , uniplate
               , unliftio
               , unliftio-core
               , unordered-containers

library
    import:           shared-properties

    exposed-modules:
      HBS2.Git.Types
      HBS2Git.Alerts
      HBS2Git.Annotations
      HBS2Git.App
      HBS2Git.KeysMetaData
      HBS2Git.Config
      HBS2Git.Evolve
      HBS2Git.Export
      HBS2Git.Encryption
      HBS2Git.Encryption.KeyInfo
      HBS2Git.GitRepoLog
      HBS2Git.Import
      HBS2Git.KeysCommand
      HBS2Git.ListRefs
      HBS2.Git.Local
      HBS2.Git.Local.CLI
      HBS2Git.PrettyStuff
      HBS2Git.State
      HBS2Git.Types

    -- other-modules:
    -- other-extensions:
    build-depends:    base
                   , exceptions
                   , terminal-progress-bar
                   , http-types
                   , uuid
                   , zlib

    hs-source-dirs:   lib
    default-language: Haskell2010

executable git-hbs2
    import:           shared-properties
    main-is:          Main.hs

    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

    other-modules:
      RunShow

    -- other-extensions:
    build-depends:
        base, hbs2-git
      , optparse-applicative
      , http-types

    hs-source-dirs:   git-hbs2
    default-language: Haskell2010


executable git-remote-hbs2
    import:           shared-properties
    main-is:          GitRemoteMain.hs

    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

    other-modules:
      GitRemoteTypes
      GitRemotePush

    -- other-extensions:
    build-depends:
        base, hbs2-git
      , async
      , attoparsec
      , optparse-applicative
      , unix
      , unliftio
      , terminal-progress-bar
      , http-types

    hs-source-dirs:   git-hbs2
    default-language: Haskell2010


executable hbs2-reposync
    import:           shared-properties
    main-is:          ReposyncMain.hs

    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

    other-modules:

    -- other-extensions:
    build-depends:
        base, hbs2-git, hbs2-core, hbs2-peer
      , optparse-applicative
      , unliftio
      , terminal-progress-bar
      , http-types
      , scotty
      , wai
      , wai-middleware-static
      , wai-extra

    hs-source-dirs:   reposync
    default-language: Haskell2010



