cabal-version:      3.0
name:               hbs2-git
version:            0.24.1.2
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
-- copyright:
category:           System
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -threaded
        -rtsopts
        -O2
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language: GHC2021

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


  build-depends:
        hbs2-core
      , hbs2-peer
      , hbs2-storage-simple
      , hbs2-keyman-direct-lib
      , db-pipe
      , suckless-conf

      , aeson
      , attoparsec
      , atomic-write
      , bytestring
      , binary
      , containers
      , directory
      , exceptions
      , filepath
      , filepattern
      , interpolatedstring-perl6
      , memory
      , microlens-platform
      , mtl
      , safe
      , serialise
      , streaming
      , stm
      , text
      , time
      , timeit
      , transformers
      , typed-process
      , unordered-containers
      , unliftio
      , unliftio-core
      , zlib
      , prettyprinter
      , prettyprinter-ansi-terminal
      , random
      , vector
      , unix


library
    import:           shared-properties

    exposed-modules:
      HBS2.Git.Local
      HBS2.Git.Local.CLI

      HBS2.Git.Data.Tx.Git
      HBS2.Git.Data.Tx.Index
      HBS2.Git.Data.RepoHead
      HBS2.Git.Data.GK
      HBS2.Git.Data.RefLog
      HBS2.Git.Data.LWWBlock

      HBS2.Git.Client.Prelude
      HBS2.Git.Client.App.Types
      HBS2.Git.Client.App.Types.GitEnv
      HBS2.Git.Client.App
      HBS2.Git.Client.Config
      HBS2.Git.Client.State
      HBS2.Git.Client.RefLog
      HBS2.Git.Client.Export
      HBS2.Git.Client.Import
      HBS2.Git.Client.Progress
      HBS2.Git.Client.Manifest

    build-depends:    base
                    , base16-bytestring
                    , binary
                    , unix

    hs-source-dirs:   hbs2-git-client-lib


library hbs2-git-dashboard-assets
  import:           shared-properties

  build-depends:
    base, file-embed, lucid, text

  exposed-modules:
      HBS2.Git.Web.Assets

  hs-source-dirs:   hbs2-git-dashboard-assets

  default-language: GHC2021


executable hbs2-git-dashboard
    import:           shared-properties
    main-is:          GitDashBoard.hs

    other-modules:
      HBS2.Git.DashBoard.Prelude
      HBS2.Git.DashBoard.Types
      HBS2.Git.DashBoard.State
      HBS2.Git.DashBoard.State.Commits
      HBS2.Git.DashBoard.State.Index
      HBS2.Git.DashBoard.State.Index.Channels
      HBS2.Git.DashBoard.State.Index.Peer
      HBS2.Git.Web.Html.Root

    -- other-extensions:
    build-depends:
        base, hbs2-git-dashboard-assets, hbs2-peer, hbs2-git, suckless-conf
        , fuzzy-parse
        , binary
        , generic-deriving
        , generic-data
        , deriving-compat
        , vector
        , optparse-applicative
        , http-types
        , file-embed
        , network-uri
        , wai
        , wai-extra
        , wai-middleware-static
        , wai-middleware-static-embedded
        , lucid
        , lucid-htmx
        , pandoc
        , skylighting
        , skylighting-core
        , skylighting-lucid
        , scotty >= 0.21

    hs-source-dirs:
      hbs2-git-dashboard
      hbs2-git-dashboard/src

    default-language: GHC2021


executable hbs2-git-subscribe
    import:           shared-properties
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, hbs2-git
        , binary
        , vector
        , optparse-applicative

    hs-source-dirs:   git-hbs2-subscribe
    default-language: GHC2021

executable git-hbs2
    import:           shared-properties
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, hbs2-git
        , binary
        , vector
        , optparse-applicative

    hs-source-dirs:   git-hbs2
    default-language: GHC2021


executable git-remote-hbs2
    import:           shared-properties
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, hbs2-git
        , binary
        , vector
        , optparse-applicative

    hs-source-dirs:   git-remote-hbs2
    default-language: GHC2021


