cabal-version:      3.0
name:               hbs2-git3
version:            0.24.1.2
synopsis: reimplemented fixme
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
-- copyright:
category:           System
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -threaded
        -rtsopts
        -O2
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language: GHC2021

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , PatternSynonyms
                     , ViewPatterns
                     , RecordWildCards


  build-depends:
        hbs2-core
      , hbs2-peer
      , hbs2-storage-simple
      , hbs2-keyman-direct-lib
      , hbs2-git
      , hbs2-cli
      , db-pipe
      , suckless-conf
      , fuzzy-parse

      , aeson
      , aeson-pretty
      , attoparsec
      , atomic-write
      , bytestring
      , binary
      , containers
      , directory
      , exceptions
      , filepath
      , filepattern
      , generic-lens
      , generic-deriving
      , interpolatedstring-perl6
      , memory
      , microlens-platform
      , mtl
      , safe
      , serialise
      , scientific
      , streaming
      , stm
      , split
      , text
      , temporary
      , time
      , timeit
      , transformers
      , typed-process
      , unordered-containers
      , unliftio
      , unliftio-core
      , zlib
      , prettyprinter
      , prettyprinter-ansi-terminal
      , random
      , vector
      , unix
      , uuid


library
    import:           shared-properties

    other-modules:

    exposed-modules:
      HBS2.Git3.Types
      HBS2.Git3.State.Types
      HBS2.Git3.State.Direct
      HBS2.Git3.Config.Local

    build-depends:    base
                    , base16-bytestring
                    , binary
                    , bzlib
                    , psqueues
                    , unix

    hs-source-dirs:  lib


executable hbs2-git3
    import:           shared-properties
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, hbs2-git3, hbs2-core, hbs2-peer, hbs2-git
        , bzlib
        , binary
        , psqueues
        , vector

    hs-source-dirs:   app
    default-language: GHC2021

executable hbs2-git-daemon
    import:           shared-properties
    main-is:          Daemon.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, hbs2-git3, hbs2-core, hbs2-peer, hbs2-git
        , bzlib
        , binary
        , vector

    hs-source-dirs:   app
    default-language: GHC2021



