cabal-version:      3.0
name:               hbs2-git3
version:            0.25.0.1
synopsis: reimplemented fixme
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
-- copyright:
category:           System
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -threaded
        -rtsopts
        -O2
        "-with-rtsopts=-N4 -A64m -AL256m -I0 -M8G"

  default-language: GHC2021

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , PatternSynonyms
                     , ViewPatterns
                     , RecordWildCards


  build-depends:
        hbs2-core
      , hbs2-peer
      , hbs2-storage-simple
      , hbs2-keyman-direct-lib
      , hbs2-git
      , hbs2-cli
      , db-pipe
      , suckless-conf
      , fuzzy-parse

      , aeson
      , aeson-pretty
      , attoparsec
      , atomic-write
      , bytestring
      , binary
      , bitvec
      , bloomfilter
      , containers
      , crypton
      , directory
      , exceptions
      , filepath
      , filepattern
      , generic-lens
      , generic-deriving
      , heaps
      , interpolatedstring-perl6
      , memory
      , mmap
      , microlens-platform
      , mtl
      , network-byte-order
      , safe
      , serialise
      , scientific
      , streaming
      , stm
      , stm-hamt
      , split
      , text
      , temporary
      , time
      , timeit
      , transformers
      , typed-process
      , unordered-containers
      , unliftio
      , unliftio-core
      , zlib
      , prettyprinter
      , prettyprinter-ansi-terminal
      , random
      , vector
      , unix
      , uuid
      , vector-algorithms
      , zstd


library
    import:           shared-properties

    other-modules:

    exposed-modules:
      HBS2.Git3.Types
      HBS2.Git3.Prelude
      HBS2.Git3.Export
      HBS2.Git3.Import
      HBS2.Git3.Repo.Init
      HBS2.Git3.Repo.Tools
      HBS2.Git3.Repo.Types
      HBS2.Git3.Repo
      HBS2.Git3.Run
      HBS2.Git3.Logger
      HBS2.Git3.State
      HBS2.Git3.State.Internal.Types
      HBS2.Git3.State.Internal.RefLog
      HBS2.Git3.State.Internal.Index
      HBS2.Git3.State.Internal.Segment
      HBS2.Git3.State.Internal.LWWBlock
      HBS2.Git3.Config.Local
      HBS2.Git3.Git
      HBS2.Git3.Git.Pack

      HBS2.Data.Log.Structured

      Crypto.Bip39

    build-depends:    base
                    , base16-bytestring
                    , binary
                    , psqueues
                    , unix

    hs-source-dirs:  lib


executable hbs2-git3
    import:           shared-properties
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, hbs2-git3, hbs2-core, hbs2-peer, hbs2-git
        , binary
        , psqueues
        , vector
        , zstd

    hs-source-dirs:   app
    default-language: GHC2021

executable git-remote-hbs23
    import:           shared-properties
    main-is:          GitRemoteHelper.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, hbs2-git3, hbs2-core, hbs2-peer, hbs2-git
        , binary
        , vector

    hs-source-dirs:   app
    default-language: GHC2021

test-suite spec
  import:          shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
    HBS2.Git3.Git.PackSpec
      -- Data.Config.Suckless.KeyValueSpec
      -- Data.Config.Suckless.AesonSpec

  hs-source-dirs:
      test
  ghc-options:
      -Wall
      -threaded
      -rtsopts
      -with-rtsopts=-N
  build-tool-depends:
      hspec-discover:hspec-discover

  build-depends:      base, hbs2-git3
                    , hspec
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck

  default-language: Haskell2010

  -- default-extensions:
  --                     DerivingStrategies
  --                   , FlexibleInstances
  --                   , MultiParamTypeClasses
  --                   , OverloadedStrings
  --                   , ScopedTypeVariables
  --                   , TypeApplications



