cabal-version:      3.0
name:               hbs2-peer
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common common-deps
    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , aeson
        , async
        , bytestring
        , cache
        , containers
        , data-default
        , deepseq
        , directory
        , dns
        , filepath
        , generic-lens
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-multicast
        , optparse-applicative
        , prettyprinter
        , random
        , random-shuffle
        , resourcet
        -- , resolv
        , safe
        , saltine >=0.2.0.1
        , suckless-conf
        , serialise
        , split
        , stm
        , streaming
        , sqlite-simple
        , time
        , temporary
        , text
        , time
        , timeit
        , transformers
        , uniplate
        , unordered-containers
        , vector
        , interpolatedstring-perl6
        , filelock
        , ekg-core
        , scotty
        , string-conversions
        , warp
        , http-conduit
        , http-types
        , wai-extra
        , unliftio
        , unliftio-core
        , unix
        , heaps
        , psqueues
        , string-conversions

common shared-properties
  ghc-options:
        -Wall
        -O2
        -fno-warn-type-defaults
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL256m -I0 -T"


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , OverloadedLabels
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


library
    import:           shared-properties
    import:           common-deps

    hs-source-dirs:   lib

    default-language: Haskell2010

    exposed-modules:
      HBS2.Peer.RPC.Class
      HBS2.Peer.RPC.API.Peer
      HBS2.Peer.RPC.API.RefLog
      HBS2.Peer.RPC.API.RefChan
      HBS2.Peer.RPC.API.Storage
      HBS2.Peer.RPC.Client.Unix
      HBS2.Peer.RPC.Client.StorageClient
      HBS2.Peer.RPC.Internal.Storage
      HBS2.Peer.RPC.Internal.Types

    other-modules:

executable hbs2-peer
    import:           shared-properties
    import:           common-deps
    main-is:          PeerMain.hs

    other-modules:
                      BlockDownload
                    , BlockHttpDownload
                    , DownloadQ
                    , DownloadMon
                    , EncryptionKeys
                    , Bootstrap
                    , PeerInfo
                    -- , PeerMain.DialogCliCommand
                    , PeerMain.Dialog.Server
                    , PeerMain.Dialog.Spec
                    , PeerMeta
                    , SendBlockAnnounce
                    , CheckBlockAnnounce
                    , CheckPeer
                    , Fetch
                    , Log
                    , RPC2
                    , RPC2.Peer
                    , RPC2.Poke
                    , RPC2.Announce
                    , RPC2.Fetch
                    , RPC2.Die
                    , RPC2.LogLevel
                    , RPC2.Peers
                    , RPC2.PexInfo
                    , RPC2.Ping
                    , RPC2.RefLog
                    , RPC2.RefChan
                    , PeerTypes
                    , PeerConfig
                    , RefLog
                    , RefChan
                    , CheckMetrics
                    , HttpWorker
                    , Brains
                    , ProxyMessaging
                    , CLI.Common
                    , CLI.RefChan

    -- other-extensions:
    build-depends:    base, hbs2-peer

    hs-source-dirs:   app

    default-language: Haskell2010


