cabal-version:      3.0
name:               hbs2-qblf
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
maintainer:         dzuikov@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies


library
    import:           shared-properties

    exposed-modules:  HBS2.Net.Proto.QBLF

    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17.2.0, hbs2-core
                   , async
                   , bytestring
                   , containers
                   , microlens-platform
                   , mtl
                   , prettyprinter
                   , random
                   , serialise
                   , stm
                   , time
                   , transformers
                   , uniplate
                   , unordered-containers
                   , unliftio

    hs-source-dirs:   lib

    default-language: GHC2021
